# johnstudio

./: .gitignore  LICENSE  README.md  pyproject.toml
desktop/: TAURI.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
docs/: USER_GUIDE.md  architecture.md  build_pdf.sh  roadmap.md  safety.md  team-mode.md  ui_backend_readiness.md
johnstudio/: __init__.py  adr.py  arc_budget.py  arc_launcher.py  arc_webhook.py  artifacts.py  auth.py  background_workers.py  blackboard.py  chain.py  circuit_breaker.py  cli.py  collector.py  config.py  context_builder.py  dag.py  db.py  embed.py  git_worktree.py  hooks.py  init.py  iteration_arc.py  knowledge_graph.py  mcp_client.py  mcp_server.py  memory.py  merger.py  models.py  orchestrator.py  patterns.py  persistence.py  plan_templates.py  project.py  rag.py  rag_memory.py  reasoning_bank.py  reviewer.py  safety.py  server.py  skill_importer.py  (+14 more)
scripts/: backfill_reasoning_bank.py  demo_ui_flow.sh  dev_all.sh  install_launch_agent.sh  start_backend.sh  start_ui.sh
seeds/: default_config.yaml  standing_rules.yaml
tests/: conftest.py  test_api.py  test_api_chain.py  test_arc_budget.py  test_arc_budget_item20.py  test_auth.py  test_background_workers.py  test_blackboard.py  test_chain_e2e.py  test_chain_state.py  test_circuit_breaker.py  test_collector_reviewer_merger.py  test_config.py  test_context_builder.py  test_db.py  test_embed_validate.py  test_git_worktree.py  test_hooks.py  test_init.py  test_knowledge_graph.py  test_mcp_client.py  test_mcp_server.py  (+20 more)
(+89 files in other folders)
